fix: login popup align on small screnn height

--- a/source/sass/blocks/login.scss
+++ b/source/sass/blocks/login.scss
@@ -9,7 +9,12 @@
     justify-content: center;
     align-items: center;
     z-index: 2;
+    overflow: auto;
     background-color: var(--c-overlay);
+  }
+
+  &--align {
+    display: initial;
   }
 }
 
